[gd_scene load_steps=35 format=3 uid="uid://bj20muoximt4f"]

[ext_resource type="Script" path="res://scenes/player_scenes/MALE_PLAYER/male_player.gd" id="1_qd2d6"]
[ext_resource type="Texture2D" uid="uid://je47p35rl2yi" path="res://assets/player_assets/MALE_CHAR/Main_Char_Animations.png" id="2_1x8uj"]
[ext_resource type="Shader" path="res://scenes/player_scenes/MALE_PLAYER/male_player.gdshader" id="2_5la36"]
[ext_resource type="PackedScene" uid="uid://smt8r84pk1vk" path="res://scenes/UI_scenes/controls/joystick/joystick.tscn" id="3_07557"]
[ext_resource type="PackedScene" uid="uid://cvrhox0avgtyd" path="res://scenes/UI_scenes/leaderboard/leaderboard.tscn" id="4_w1b2n"]
[ext_resource type="PackedScene" uid="uid://dfy3apgcwrc0u" path="res://scenes/UI_scenes/controls/sprint/sprint_button.tscn" id="5_t2ir3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ygvg"]
resource_local_to_scene = true
shader = ExtResource("2_5la36")
shader_parameter/line_color = Color(0.623529, 0.0117647, 0, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cc57n"]
size = Vector2(81, 66.25)

[sub_resource type="Animation" id="Animation_f11f1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_fp26j"]
resource_name = "idle down"
loop_mode = 1
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_8nxwk"]
resource_name = "idle_left"
loop_mode = 1
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_m7adf"]
resource_name = "idle_right"
loop_mode = 1
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_4hstn"]
resource_name = "idle_up"
loop_mode = 1
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="Animation" id="Animation_h0cfc"]
resource_name = "move_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_mj6ik"]
resource_name = "move_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_xxcq0"]
resource_name = "move_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_qohff"]
resource_name = "move_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulcfu"]
_data = {
"RESET": SubResource("Animation_f11f1"),
"idle down": SubResource("Animation_fp26j"),
"idle_left": SubResource("Animation_8nxwk"),
"idle_right": SubResource("Animation_m7adf"),
"idle_up": SubResource("Animation_4hstn"),
"move_down": SubResource("Animation_h0cfc"),
"move_left": SubResource("Animation_mj6ik"),
"move_right": SubResource("Animation_xxcq0"),
"move_up": SubResource("Animation_qohff")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g7my0"]
animation = &"idle down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t1l34"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aa40h"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_inw0e"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_e67m4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_g7my0")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_t1l34")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_aa40h")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_inw0e")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vkfy1"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oa3vd"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_osxui"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uetb7"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ddanr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vkfy1")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_oa3vd")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_osxui")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_uetb7")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ea00a"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_778tt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ufaig"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_42mkr"]
states/Start/position = Vector2(215, 95)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_e67m4")
states/idle/position = Vector2(403, 92)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_ddanr")
states/walk/position = Vector2(570, 95)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ea00a"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_778tt"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_ufaig")]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6vtq1"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = true
properties/1/path = NodePath("Camera2D:position")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = true
properties/2/path = NodePath("playername:theme_override_colors/font_color")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = true
properties/3/path = NodePath(".:can_tag")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = true

[sub_resource type="CircleShape2D" id="CircleShape2D_dalp6"]
radius = 88.0

[node name="male_player" type="CharacterBody2D"]
script = ExtResource("1_qd2d6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8ygvg")
position = Vector2(3.725, -33.3936)
scale = Vector2(0.903438, 0.88258)
texture = ExtResource("2_1x8uj")
hframes = 10
vframes = 5
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(5.5, 6.125)
shape = SubResource("RectangleShape2D_cc57n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulcfu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_42mkr")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/idle/blend_position = Vector2(-0.998466, 0.0240176)
parameters/walk/blend_position = Vector2(-0.00160003, 0.072455)

[node name="Camera2D" type="Camera2D" parent="."]
rotation = -0.0123881
zoom = Vector2(0.5, 0.5)

[node name="VBoxContainer" parent="Camera2D" instance=ExtResource("4_w1b2n")]
visible = false
offset_left = -1779.97
offset_top = -982.125
offset_right = -1069.97
offset_bottom = -662.125
rotation = 0.0124982
scale = Vector2(2, 2)

[node name="joystick" parent="Camera2D" instance=ExtResource("3_07557")]
visible = false
position = Vector2(-1280, 616)
scale = Vector2(1.6, 1.6)

[node name="sprint_button" parent="Camera2D" instance=ExtResource("5_t2ir3")]
visible = false
position = Vector2(984, 616)
scale = Vector2(0.5, 0.5)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6vtq1")

[node name="playername" type="Label" parent="."]
offset_left = -152.0
offset_top = -224.0
offset_right = 158.0
offset_bottom = -152.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Player Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_dalp6")
disabled = true

[node name="ColTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TagTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="winner" type="Label" parent="."]
visible = false
offset_left = -672.0
offset_top = -608.0
offset_right = 624.0
offset_bottom = -280.0
theme_override_font_sizes/font_size = 100
text = "PLACEHOLDER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ColTimer" to="." method="_on_col_timer_timeout"]
[connection signal="timeout" from="TagTimer" to="." method="_on_tag_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
